makko/default/filerun/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: filerun
  labels:
    app: filerun
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: filerun
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: filerun
    spec:
      containers:
      - image: mariadb:13.0
        name: mariadb
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
            ephemeral-storage: 4Gi
          requests:
            cpu: 10m
            memory: 64Mi
      - image: registry.senk0.com/filerun
        name: filerun
        volumeMounts:
        - name: html
          mountPath: /var/www/html
        - name: user-files
          mountPath: /user-files
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: 4Gi
            ephemeral-storage: 4Gi
          requests:
            cpu: 100m
            memory: 256Mi
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: filerun-html
          readOnly: false
      - name: user-files
        persistentVolumeClaim:
          claimName: filerun-user-files
          readOnly: false
      - name: mysql
        persistentVolumeClaim:
          claimName: filerun-db
          readOnly: false
