makko/default/filerun/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filerun
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "cloud.senk0.com"
  rules:
    - backendRefs:
        - name: filerun
          port: 3306
